- Fix all the inconsistencies between `-CloseProcesses` and remaining old "CloseApps" parameters.

--- a/Sources/PSADT.UserInterface/PSADT.UserInterface/UserInterface/PSADT.UserInterface.WelcomeDialog.xaml
+++ b/Sources/PSADT.UserInterface/PSADT.UserInterface/UserInterface/PSADT.UserInterface.WelcomeDialog.xaml
@@ -161,7 +161,7 @@
 
         <!-- Close Apps List Panel -->
         <StackPanel
-            x:Name="CloseAppsListPanel"
+            x:Name="CloseProcessesListPanel"
             Grid.Column="1"
             Grid.Row="2"
             Margin="24,0,24,8">
