Finalization of dialog components prior to public release.
- Replace legacy components with modern UI equivalents for improved consistency and styling.
- Update bindings and enhance button styles to align with the new design system.
- Rename some UI elements and improve async handling of dialogs.
- Adjustments to icon width for improved UI layout.
- Implement countdown feature to match WinForms code, using TimeSpan objects.
- Reduce default UI timeout from 115 minutes to 55 minutes for Intune's sake.
- Removed banner entirely to make the dialogs look more native.
- Miscellaneous formatting improvements across all dialogs.
- Updated PowerShell demonstration scripts in solution folder.

--- a/Sources/PSADT.UserInterface/PSADT.UserInterface/Properties/DesignTimeResources.xaml
+++ b/Sources/PSADT.UserInterface/PSADT.UserInterface/Properties/DesignTimeResources.xaml
@@ -1,9 +1,9 @@
-﻿<ResourceDictionary
+<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml">
     <ResourceDictionary.MergedDictionaries>
-        <ui:ThemesDictionary Theme="Dark"/>
+        <ui:ThemesDictionary />
         <ui:ControlsDictionary />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
