--- a/src/PSADT.UserInterface/PSADT.UserInterface/UserInterface/PSADT.UserInterface.CustomDialog.xaml
+++ b/src/PSADT.UserInterface/PSADT.UserInterface/UserInterface/PSADT.UserInterface.CustomDialog.xaml
@@ -1,11 +1,10 @@
-<local:BaseDialog
+﻿<local:BaseDialog
     x:Class="PSADT.UserInterface.CustomDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    xmlns:tray="http://schemas.lepo.co/wpfui/2022/xaml/tray"
     xmlns:local="clr-namespace:PSADT.UserInterface"
     Background="Transparent"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
@@ -14,8 +13,8 @@
     ResizeMode="NoResize"
     MinHeight="150"
     MaxHeight="800"
-    MinWidth="560"
-    MaxWidth="560"
+    MinWidth="580"
+    MaxWidth="580"
     SizeToContent="Height"
     mc:Ignorable="d"
     SnapsToDevicePixels="True"
@@ -102,18 +101,12 @@
             ShowClose="false"
             ShowMinimize="false" />
 
-        <tray:NotifyIcon
-            x:Name="NotifyIcon"
-            FocusOnLeftClick="True"
-            MenuOnRightClick="False"
-            TooltipText="" />
-
         <!-- Header Panel -->
         <StackPanel
             x:Name="HeaderPanel"
             Grid.Row="0"
             Grid.Column="1"
-            Margin="24,32,32,24"
+            Margin="24,20,32,20"
             VerticalAlignment="Top"
             HorizontalAlignment="Stretch"
             Width="Auto">
@@ -124,6 +117,7 @@
                     x:Name="AppIconImage"
                     Width="64"
                     Height="64"
+                    Margin="0,0,14,0"
                     Stretch="Uniform">
                     <Image.Source>
                         <BitmapImage UriSource="pack://application:,,,/PSADT.UserInterface;component/Resources/appIcon.png" />
@@ -141,7 +135,7 @@
                         TextWrapping="WrapWithOverflow"
                         TextTrimming="CharacterEllipsis"
                         Text="Very Long Application Installation Name 1.0 EN"
-                        MaxWidth="428"
+                        MaxWidth="410"
                         FontTypography="Title"
                         VerticalAlignment="Center"
                         Foreground="{DynamicResource TextFillColorPrimaryBrush}" />
@@ -152,7 +146,7 @@
                         FontTypography="Caption"
                         TextAlignment="Left"
                         TextWrapping="Wrap"
-                        MaxWidth="462"
+                        MaxWidth="410"
                         TextTrimming="CharacterEllipsis"
                         Text="Super Long Company Name To Testing Wrapping - App Installation"
                         Foreground="{DynamicResource TextFillColorSecondaryBrush}" />
@@ -192,11 +186,15 @@
                         Text="Please select from the options below."
                         TextWrapping="Wrap"
                         FontTypography="BodyStrong"
-                        Foreground="{DynamicResource TextFillColorPrimaryBrush}" />
+                        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+Visibility="Collapsed"
+                        />
 
                     <Separator
                         Grid.Row="1"
-                        BorderBrush="{DynamicResource ControlStrokeColorOnAccentTertiaryBrush}" />
+                        BorderBrush="{DynamicResource ControlStrokeColorOnAccentTertiaryBrush}"
+Visibility="Collapsed"
+                        />
 
                     <ui:TextBlock
                         x:Name="CustomMessageTextBlock"
