--- a/src/PSADT.UserInterface/PSADT.UserInterface/UserInterface/PSADT.UserInterface.WelcomeDialog.xaml
+++ b/src/PSADT.UserInterface/PSADT.UserInterface/UserInterface/PSADT.UserInterface.WelcomeDialog.xaml
@@ -1,11 +1,10 @@
-<local:BaseDialog
+﻿<local:BaseDialog
     x:Class="PSADT.UserInterface.WelcomeDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    xmlns:tray="http://schemas.lepo.co/wpfui/2022/xaml/tray"
     xmlns:local="clr-namespace:PSADT.UserInterface"
     Background="Transparent"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
@@ -14,8 +13,8 @@
     ResizeMode="NoResize"
     MinHeight="150"
     MaxHeight="800"
-    MinWidth="560"
-    MaxWidth="560"
+    MinWidth="580"
+    MaxWidth="580"
     SizeToContent="Height"
     mc:Ignorable="d"
     SnapsToDevicePixels="True"
@@ -25,7 +24,6 @@
     TextOptions.TextFormattingMode="Display"
     TextOptions.TextHintingMode="Animated"
     TextOptions.TextRenderingMode="ClearType"
-    Title="PSAppDeployToolkit"
     Topmost="True">
 
     <local:BaseDialog.Resources>
@@ -53,7 +51,6 @@
             Fill="{DynamicResource LayerOnMicaBaseAltFillColorDefaultBrush}" />
 
         <!-- Accent Sidebar and Icon -->
-
         <Grid
             x:Name="GridRow0Vertical"
             Grid.Column="0"
@@ -95,6 +92,7 @@
 
         <!-- Title Bar -->
         <ui:TitleBar
+            x:Name="TitleBar"
             Grid.Row="0"
             Grid.Column="0"
             Grid.ColumnSpan="2"
@@ -104,18 +102,12 @@
             ShowClose="false"
             ShowMinimize="false" />
 
-        <tray:NotifyIcon
-            x:Name="NotifyIcon"
-            FocusOnLeftClick="True"
-            MenuOnRightClick="False"
-            TooltipText="" />
-
         <!-- Header Panel -->
         <StackPanel
             x:Name="HeaderPanel"
             Grid.Row="0"
             Grid.Column="1"
-            Margin="24,32,32,24"
+            Margin="24,20,32,20"
             VerticalAlignment="Top"
             HorizontalAlignment="Stretch"
             Width="Auto">
@@ -126,6 +118,7 @@
                     x:Name="AppIconImage"
                     Width="64"
                     Height="64"
+                    Margin="0,0,14,0"
                     Stretch="Uniform">
                     <Image.Source>
                         <BitmapImage UriSource="pack://application:,,,/PSADT.UserInterface;component/Resources/appIcon.png" />
@@ -143,7 +136,7 @@
                         TextWrapping="WrapWithOverflow"
                         TextTrimming="CharacterEllipsis"
                         Text="Very Long Application Installation Name 1.0 EN"
-                        MaxWidth="428"
+                        MaxWidth="410"
                         FontTypography="Title"
                         VerticalAlignment="Center"
                         Foreground="{DynamicResource TextFillColorPrimaryBrush}" />
@@ -154,7 +147,7 @@
                         FontTypography="Caption"
                         TextAlignment="Left"
                         TextWrapping="Wrap"
-                        MaxWidth="462"
+                        MaxWidth="410"
                         TextTrimming="CharacterEllipsis"
                         Text="Super Long Company Name To Testing Wrapping - App Installation"
                         Foreground="{DynamicResource TextFillColorSecondaryBrush}" />
@@ -191,8 +184,8 @@
                         Margin="16,16,16,16"
                         HorizontalAlignment="Stretch"
                         TextAlignment="Left"
-                        Text="Please save your work before continuing. The following applications will be closed automatically."
                         TextWrapping="Wrap"
+                        Text="Please save your work before continuing. The following applications will be closed automatically."
                         FontTypography="BodyStrong"
                         Foreground="{DynamicResource TextFillColorPrimaryBrush}" />
 
@@ -207,12 +200,11 @@
                         BorderThickness="0"
                         ViewState="GridView"
                         Grid.Row="2"
-                        MinHeight="100"
                         MaxHeight="330"
                         ScrollViewer.VerticalScrollBarVisibility="Auto"
                         VerticalAlignment="Top"
                         Margin="8,0,8,0"
-                        Padding="0,8,0,8"
+                        Padding="0,0,0,8"
                         VirtualizingStackPanel.IsVirtualizing="True"
                         VirtualizingStackPanel.VirtualizationMode="Recycling"
                         SelectionMode="Single">
