- Hook up `-NoCountdown` for `Show-ADTInstallationRestartPromptFluent`.

--- a/src/PSADT.UserInterface/PSADT.UserInterface/UserInterface/PSADT.UserInterface.RestartDialog.xaml
+++ b/src/PSADT.UserInterface/PSADT.UserInterface/UserInterface/PSADT.UserInterface.RestartDialog.xaml
@@ -196,6 +196,7 @@
                         BorderBrush="{DynamicResource ControlStrokeColorOnAccentTertiaryBrush}" />
 
                     <StackPanel
+                        x:Name="RestartCountdownStackPanel"
                         Grid.Row="2"
                         HorizontalAlignment="Stretch"
                         VerticalAlignment="Center"
