--- a/src/PSADT.UserInterface/PSADT.UserInterface/Dialogs/Fluent/PSADT.UserInterface.Dialogs.Fluent.FluentDialog.xaml
+++ b/src/PSADT.UserInterface/PSADT.UserInterface/Dialogs/Fluent/PSADT.UserInterface.Dialogs.Fluent.FluentDialog.xaml
@@ -5,7 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:psconv="clr-namespace:PSADT.UserInterface.Converters"
+    xmlns:psconv="clr-namespace:PSADT.UserInterface.Types"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Width="580"
     MinWidth="580"
