--- a/src/PSADT.UserInterface/PSADT.UserInterface/Dialogs/Fluent/PSADT.UserInterface.Dialogs.Fluent.FluentDialog.xaml
+++ b/src/PSADT.UserInterface/PSADT.UserInterface/Dialogs/Fluent/PSADT.UserInterface.Dialogs.Fluent.FluentDialog.xaml
@@ -1,8 +1,8 @@
 ﻿<ui:FluentWindow
     x:Class="PSADT.UserInterface.Dialogs.Fluent.FluentDialog"
-    x:ClassModifier="internal"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=PresentationFramework"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:psconv="clr-namespace:PSADT.UserInterface.Types"
@@ -12,6 +12,9 @@
     MinHeight="198"
     MaxWidth="580"
     MaxHeight="850"
+    ui:Design.Background="Transparent"
+    ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+    x:ClassModifier="internal"
     AutomationProperties.AutomationId="PSAppDeployToolkitDialog"
     AutomationProperties.Name="PSAppDeployToolkit Dialog"
     Background="Transparent"
@@ -20,18 +23,16 @@
     ExtendsContentIntoTitleBar="True"
     FontFamily="Segoe UI Display"
     FontSize="14"
-    ui:Design.Background="Transparent"
-    ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+    RenderOptions.BitmapScalingMode="HighQuality"
     ResizeMode="NoResize"
     SizeToContent="Height"
     SnapsToDevicePixels="True"
-    UseLayoutRounding="True"
-    RenderOptions.BitmapScalingMode="HighQuality"
     TextOptions.TextFormattingMode="Display"
     TextOptions.TextHintingMode="Animated"
     TextOptions.TextRenderingMode="ClearType"
     Topmost="True"
+    UseLayoutRounding="True"
     WindowBackdropType="Acrylic"
     WindowCornerPreference="RoundSmall"
     mc:Ignorable="d"
@@ -46,13 +47,15 @@
         <Style x:Key="ListViewItemAnimationStyle" BasedOn="{StaticResource {x:Type ui:ListViewItem}}" TargetType="ui:ListViewItem">
             <Setter Property="IsTabStop" Value="False" />
             <Setter Property="Focusable" Value="False" />
-            <Setter Property="Opacity" Value="0" />
-            <Setter Property="RenderTransform">
-                <Setter.Value>
-                    <TranslateTransform X="-20" Y="0" />
-                </Setter.Value>
-            </Setter>
             <Style.Triggers>
+                <Trigger Property="componentModel:DesignerProperties.IsInDesignMode" Value="False">
+                    <Setter Property="Opacity" Value="0" />
+                    <Setter Property="RenderTransform">
+                        <Setter.Value>
+                            <TranslateTransform X="-20" Y="0" />
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
                 <EventTrigger RoutedEvent="Loaded">
                     <BeginStoryboard>
                         <Storyboard>
@@ -61,14 +64,14 @@
                                 Storyboard.TargetProperty="Opacity"
                                 From="0"
                                 To="1"
-                                Duration="0:0:0.3"
+                                Duration="0:0:0.6"
                                 />
                             <DoubleAnimation
                                 FillBehavior="HoldEnd"
                                 Storyboard.TargetProperty="RenderTransform.X"
                                 From="-20"
                                 To="0"
-                                Duration="0:0:0.3"
+                                Duration="0:0:0.6"
                                 >
                                 <DoubleAnimation.EasingFunction>
                                     <CircleEase EasingMode="EaseOut" />
@@ -154,14 +157,14 @@
             Grid.Row="0"
             Grid.Column="0"
             Grid.ColumnSpan="2"
+            MaxHeight="32"
+            Margin="16,0,0,0"
             AutomationProperties.Name="Dialog Title Bar"
             CanMaximize="False"
             CloseWindowByDoubleClickOnIcon="False"
             ShowClose="False"
             ShowMaximize="False"
             ShowMinimize="false"
-            Margin="16,0,0,0"
-            MaxHeight="32"
             />
 
         <Rectangle
@@ -194,8 +197,7 @@
                     Margin="0,0,12,0"
                     AutomationProperties.Name="Application Icon"
                     Stretch="Uniform"
-                    >
-                </Image>
+                    />
                 <StackPanel
                     x:Name="HeaderPanelNested2"
                     Orientation="Vertical"
@@ -262,8 +264,8 @@
                         x:Name="MessageTextBlock"
                         Margin="16,16,16,16"
                         Appearance="Primary"
-                        FontTypography="BodyStrong"
                         AutomationProperties.Name="Message Text"
+                        FontTypography="BodyStrong"
                         Text="Test Message. This will be replaced when the application executes."
                         TextAlignment="Left"
                         TextWrapping="Wrap"
@@ -273,9 +275,8 @@
                         x:Name="CustomMessageTextBlock"
                         Margin="16,0,16,16"
                         Appearance="Primary"
-                        FontTypography="Body"
-                       
                         AutomationProperties.Name="Message Text"
+                        FontTypography="Body"
                         Text="This is a custom message that can be added by the customer as an additional block of text. This can be added to any dialog."
                         TextAlignment="Left"
                         TextWrapping="Wrap"
@@ -391,8 +392,8 @@
                         x:Name="ProgressMessageDetailTextBlock"
                         Margin="16,16,16,16"
                         HorizontalAlignment="Stretch"
-                        FontTypography="Body"
                         AutomationProperties.Name="Progress Detail Text"
+                        FontTypography="Body"
                         Text="Secondary Progress Message for more details ..."
                         TextTrimming="CharacterEllipsis"
                         TextWrapping="Wrap"
@@ -511,8 +512,8 @@
                             Margin="16,0,0,0"
                             VerticalAlignment="Center"
                             Appearance="Primary"
-                            Text="Deferral Deadline"
                             FontTypography="Body"
+                            Text="Deferral Deadline"
                             TextWrapping="WrapWithOverflow"
                             />
                         <ui:TextBlock
