Small cosmetic improvements to dialogs.
Changed the alignment of the countdown and deferral icons.

Increase Countdown and Deferrals remaining font size by 1pt just to emphasis it a bit more.

Changed the top margin on the dialog to reduce spacing.

Changed the Max Height of the CloseApps ListView to show exactly three items without scrollbar being visible.

Cosmetic changes to Progress Bar.

Removed the word 'remain' from the Deferral Remaining textbox on the CloseApps dialog.

Changed Test Harness use of accent color back to the default for now (commented out for each dialog)

--- a/src/PSADT.UserInterface/PSADT.UserInterface/Dialogs/Fluent/PSADT.UserInterface.Dialogs.Fluent.FluentDialog.xaml
+++ b/src/PSADT.UserInterface/PSADT.UserInterface/Dialogs/Fluent/PSADT.UserInterface.Dialogs.Fluent.FluentDialog.xaml
@@ -9,7 +9,7 @@
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Width="580"
     MinWidth="580"
-    MinHeight="198"
+    MinHeight="240"
     MaxWidth="580"
     MaxHeight="850"
     ui:Design.Background="Transparent"
@@ -181,7 +181,7 @@
             Grid.Row="0"
             Grid.Column="1"
             Width="Auto"
-            Margin="24,40,24,8"
+            Margin="24,24,24,8"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Top"
             AutomationProperties.Name="Header Panel"
@@ -299,7 +299,7 @@
                     <!-- d:DataContext="{d:DesignInstance Type=ui:GridViewColumn}" -->
                     <ui:ListView
                         x:Name="CloseAppsListView"
-                        MaxHeight="198"
+                        MaxHeight="182"
                         Margin="24,8,24,8"
                         Padding="0"
                         d:ItemsSource="{d:SampleData ItemCount=3}"
@@ -405,10 +405,11 @@
                         Margin="16,0,16,24"
                         Padding="1,2,1,2"
                         Background="{DynamicResource CardStrokeColorDefaultBrush}"
-                        CornerRadius="3"
+                        CornerRadius="2"
                         >
                         <ProgressBar
                             x:Name="ProgressBar"
+                            Height="3"
                             VerticalAlignment="Center"
                             IsIndeterminate="True"
                             />
@@ -456,7 +457,7 @@
                         >
 
                         <ui:SymbolIcon
-                            VerticalAlignment="Center"
+                            VerticalAlignment="Top"
                             FontSize="24"
                             Symbol="Timer24"
                             />
@@ -478,6 +479,7 @@
                             Appearance="Primary"
                             AutomationProperties.Name="Countdown Timer Value"
                             FontTypography="BodyStrong"
+                            FontSize="15"
                             Foreground="{DynamicResource TextFillColorPrimaryBrush}"
                             Text="00:00:00"
                             />
@@ -503,7 +505,7 @@
                         Margin="24,16,24,16"
                         >
                         <ui:SymbolIcon
-                            VerticalAlignment="Center"
+                            VerticalAlignment="Top"
                             FontSize="24"
                             Symbol="ApprovalsApp24"
                             />
@@ -522,6 +524,7 @@
                             VerticalAlignment="Center"
                             Appearance="Primary"
                             FontTypography="BodyStrong"
+                            FontSize="15"
                             Foreground="{DynamicResource TextFillColorPrimaryBrush}"
                             Text="Sun, 20th Apr 2025, 13:00 EST"
                             TextWrapping="WrapWithOverflow"
