More UI refinements and fixes
Fixed window position
Fixed a few styling issues
Fixed minimize button state on RestartDialog
Corrected to use local time

--- a/src/PSADT.UserInterface/PSADT.UserInterface/Dialogs/Fluent/PSADT.UserInterface.Dialogs.Fluent.FluentDialog.xaml
+++ b/src/PSADT.UserInterface/PSADT.UserInterface/Dialogs/Fluent/PSADT.UserInterface.Dialogs.Fluent.FluentDialog.xaml
@@ -9,14 +9,17 @@
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     MinHeight="0"
     MaxWidth="580"
-    MaxHeight="1100"
-    ui:Design.Background="Transparent"
+    MaxHeight="850"
+    ui:Design.Background="{DynamicResource LayerOnMicaBaseAltFillColorSecondaryBrush}"
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     x:ClassModifier="internal"
     AutomationProperties.AutomationId="PSAppDeployToolkitDialog"
     AutomationProperties.Name="PSAppDeployToolkit Dialog"
-    Background="Transparent"
+    Background="{DynamicResource LayerOnMicaBaseAltFillColorSecondaryBrush}"
     ExtendsContentIntoTitleBar="True"
+    FontFamily="Segoe UI Variable"
+    FontSize="14"
+    FontWeight="Regular"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     RenderOptions.BitmapScalingMode="HighQuality"
     ResizeMode="NoResize"
@@ -105,13 +108,13 @@
 
             <Rectangle
                 x:Name="AccentSidebar"
-                Fill="{DynamicResource AccentTextFillColorPrimaryBrush}"
+                Fill="{DynamicResource AccentFillColorDefaultBrush}"
                 Opacity="1"
                 />
 
             <ui:ImageIcon
-                Width="16"
-                Margin="0,8,0,0"
+                Width="20"
+                Margin="0,6,0,0"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Top"
                 AutomationProperties.Name="PSAppDeployToolkit Logo"
@@ -195,7 +198,7 @@
                         Appearance="Primary"
                         AutomationProperties.Name="Application Title"
                         FontSize="28"
-                        FontTypography="BodyStrong"
+                        FontWeight="Bold"
                         Text="Excessively Long Vendor Application Title 1.1 x64 EN"
                         TextAlignment="Left"
                         TextTrimming="CharacterEllipsis"
@@ -210,7 +213,7 @@
                         VerticalAlignment="Center"
                         Appearance="Secondary"
                         AutomationProperties.Name="Subtitle"
-                        FontSize="12"
+                        FontSize="13"
                         Text="PSAppDeployToolkit - Installation Type"
                         TextAlignment="Left"
                         TextTrimming="CharacterEllipsis"
@@ -228,7 +231,7 @@
             VerticalAlignment="Top"
             AutomationProperties.Name="Content Card"
             Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
-            BorderBrush="{DynamicResource CardStrokeColorDefaultSolidBrush}"
+            BorderBrush="{DynamicResource CardStrokeColorDefaultBrush}"
             BorderThickness="1"
             CornerRadius="4"
             SnapsToDevicePixels="True"
@@ -250,7 +253,7 @@
                         Margin="16,16,16,16"
                         Appearance="Primary"
                         AutomationProperties.Name="Message Text"
-                        FontTypography="BodyStrong"
+                        FontWeight="Bold"
                         Text="Test Message. This will be replaced when the application executes."
                         TextAlignment="Left"
                         TextWrapping="Wrap"
@@ -261,7 +264,6 @@
                         Margin="16,0,16,16"
                         Appearance="Primary"
                         AutomationProperties.Name="Message Text"
-                        FontTypography="Body"
                         Text="This is a custom message that can be added by the customer as an additional block of text. This can be added to any dialog."
                         TextAlignment="Left"
                         TextWrapping="Wrap"
@@ -337,7 +339,7 @@
                                         Margin="8,4,16,0"
                                         HorizontalAlignment="Stretch"
                                         AutomationProperties.Name="Process Description"
-                                        FontTypography="BodyStrong"
+                                        FontWeight="Bold"
                                         Text="{Binding Description, Mode=OneWay}"
                                         TextTrimming="CharacterEllipsis"
                                         TextWrapping="Wrap"
@@ -349,7 +351,8 @@
                                         Margin="8,0,16,4"
                                         HorizontalAlignment="Stretch"
                                         AutomationProperties.Name="Process Name"
-                                        FontSize="12"
+                                        FontSize="13"
+                                        FontWeight="Medium"
                                         Foreground="{DynamicResource AccentTextFillColorTertiaryBrush}"
                                         Text="{Binding Name, Mode=OneWay}"
                                         TextAlignment="Left"
@@ -378,7 +381,7 @@
                         Margin="16,16,16,16"
                         HorizontalAlignment="Stretch"
                         AutomationProperties.Name="Progress Detail Text"
-                        FontTypography="Body"
+                        FontWeight="SemiBold"
                         Text="Secondary Progress Message for more details ..."
                         TextTrimming="CharacterEllipsis"
                         TextWrapping="Wrap"
@@ -452,7 +455,6 @@
                             HorizontalAlignment="Left"
                             VerticalAlignment="Center"
                             Appearance="Primary"
-                            FontTypography="Body"
                             Text="Automatic Install Countdown"
                             TextWrapping="WrapWithOverflow"
                             />
@@ -464,7 +466,7 @@
                             Appearance="Primary"
                             AutomationProperties.Name="Countdown Timer Value"
                             FontSize="15"
-                            FontTypography="BodyStrong"
+                            FontWeight="Bold"
                             Foreground="{DynamicResource TextFillColorPrimaryBrush}"
                             Text="00:00:00"
                             />
@@ -509,7 +511,7 @@
                             VerticalAlignment="Center"
                             Appearance="Primary"
                             FontSize="15"
-                            FontTypography="BodyStrong"
+                            FontWeight="Bold"
                             Foreground="{DynamicResource TextFillColorPrimaryBrush}"
                             Text="3"
                             TextWrapping="WrapWithOverflow"
@@ -544,7 +546,6 @@
                             Margin="16,0,0,0"
                             VerticalAlignment="Center"
                             Appearance="Primary"
-                            FontTypography="Body"
                             Text="Deferral Deadline"
                             TextWrapping="WrapWithOverflow"
                             />
@@ -554,9 +555,9 @@
                             VerticalAlignment="Center"
                             Appearance="Primary"
                             FontSize="15"
-                            FontTypography="BodyStrong"
+                            FontWeight="Bold"
                             Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                            Text="Sun, 20th Apr 2025, 13:00 EST"
+                            Text="August 15, 2025 5.30PM"
                             TextWrapping="WrapWithOverflow"
                             />
                     </DockPanel>
