- Ensure graphics on fluent UI are rendered in high quality.

--- a/src/PSADT/PSADT.UserInterface/Dialogs/Fluent/PSADT.UserInterface.Dialogs.Fluent.FluentDialog.xaml
+++ b/src/PSADT/PSADT.UserInterface/Dialogs/Fluent/PSADT.UserInterface.Dialogs.Fluent.FluentDialog.xaml
@@ -22,6 +22,7 @@
     FontFamily="Segoe UI Variable"
     FontSize="14"
     FontWeight="Regular"
+    RenderOptions.BitmapScalingMode="HighQuality"
     ResizeMode="NoResize"
     SizeToContent="Height"
     SnapsToDevicePixels="True"
