--- a/source/iNKORE.UI.WPF/Themes/Generic.xaml
+++ b/source/iNKORE.UI.WPF/Themes/Generic.xaml
@@ -1,6 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:c="clr-namespace:iNKORE.UI.WPF.Controls">
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/iNKORE.UI.WPF;component/Controls/ClippedContent.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
     
     <Style TargetType="c:OpacityMaskedImage">
         <Setter Property="Template">
